--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,24 +1,43 @@
 header.navbar {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: var(--navbackground);
-  z-index: 100;
-  box-shadow: 0 2px 4px rgba(#000000, 0.5);
-  position: fixed;
-  top: 0;
-  .logo {
-    font-family: var(--font-heading);
-    font-size: 1.2rem;
-  }
-  div, a {
-    margin: 0.5em 1em;
-    padding: 4px 8px;
-    color: var(--navtext);
-    text-decoration: none;
-  }
   nav {
-    display: flex;
+    background: var(--navbar-background);
+    color: var(--white);
+    .show {
+      color: var(--black);
+    }
+    .brand {
+      font-family: Oswald;
+      font-size: 1.5em;
+      svg {
+        height: 30px;
+        transition: 0.4s;
+        fill: var(--primary)
+      }
+    }
+    .subscribe {
+      background: var(--primary) !important;
+    }
+    .burger {
+      font-size: 2em;
+    }
+    .menu {
+      text-transform: uppercase;
+      a {
+        @extend .button;
+      }
+      i {
+        margin-right: 0.3em;
+      }
+      #home-link {
+        @extend .none-900;
+      }
+    }
+  }
+
+}
+nav .show:checked ~ .menu {
+  background: var(--primary);
+  a {
+    width: 100%;
   }
 }
