--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,13 +1,50 @@
-article {
-  margin-top: 60px;
-    h1 {
-      margin-top: 10%;
-      font-size: 2rem;
-      font-family: var(--font-heading);
+main.page {
+  display: flex;
+  justify-content: center;
+  width: 95%;
+  article {
+    padding-bottom: 1in;
+    // width: 80%;
+    h1,h2,h3 {
+      margin: 2em 0 0.5em 0;
+      line-height: 1.5;
     }
-    p {
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 1em;
+    }
+    ul {
+      list-style: disc;
+      margin-left: 2em;
+      ul {
+        list-style: circle;
+      }
       &+p {
-        margin-top: 1em;
+        margin-top: 1.5em;
       }
     }
+    a {
+      color: var(--href);
+    }
+    h2 {
+      font-size: 2rem;
+    }
+    h3 {
+      font-size: 1.8rem;
+    }
+    color: var(--foreground);
+    max-width: 60em;
+    width: 80%;
+    margin-top: 60px;
+      h1 {
+        margin-top: 10%;
+        font-size: 2rem;
+        font-family: var(--font-heading);
+      }
+      p {
+        &+p {
+          margin-top: 1em;
+        }
+      }
+  }
 }
