--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,3 +1,19 @@
+main {
+  h1,h2,h3 {
+    // margin: 2em 0 0.5em 0;
+    line-height: 1.5;
+  }
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 1em;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  h3 {
+    font-size: 1.8rem;
+  }
+}
 main.page {
   display: flex;
   justify-content: center;
@@ -5,14 +21,6 @@ main.page {
   article {
     padding-bottom: 1in;
     // width: 80%;
-    h1,h2,h3 {
-      margin: 2em 0 0.5em 0;
-      line-height: 1.5;
-    }
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 1em;
-    }
     ul {
       list-style: disc;
       margin-left: 2em;
@@ -25,12 +33,6 @@ main.page {
     }
     a {
       color: var(--href);
-    }
-    h2 {
-      font-size: 2rem;
-    }
-    h3 {
-      font-size: 1.8rem;
     }
     color: var(--foreground);
     max-width: 60em;
