--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,7 @@ $picnic-grid-offpart-sizes: (
 @import 'home';
 @import 'navbar';
 @import 'page';
+@import 'updates';
 
 @media
 (-webkit-min-device-pixel-ratio: 2),
