--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
       {% include feature.html f=f  %}
   {% endfor %}
   </div>
-  <div class="systems">
+  <div class="systems" style='display:none'>
 
     <div>
       <i class='fab fa-microsoft'></i>
