--- a/_layouts/update.html
+++ b/_layouts/update.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<main class='updates flex'>
+<main class='contents'>
   <article>
     {% if page.release %}
       {% assign update = page %}
