--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,6 +1,5 @@
 main {
   h1,h2,h3 {
-    // margin: 2em 0 0.5em 0;
     line-height: 1.5;
   }
   h1 {
@@ -21,6 +20,10 @@ main.page {
   article {
     padding-bottom: 1in;
     // width: 80%;
+    max-width: 40em;
+    a {
+      text-decoration: underline;
+    }
     ul {
       list-style: disc;
       margin-left: 2em;
@@ -38,15 +41,13 @@ main.page {
     max-width: 60em;
     width: 80%;
     margin-top: 60px;
-      h1 {
-        margin-top: 10%;
-        font-size: 2rem;
-        font-family: var(--font-heading);
+    h1 {
+      font-family: var(--font-heading);
+    }
+    p {
+      &+p {
+        margin-top: 1em;
       }
-      p {
-        &+p {
-          margin-top: 1em;
-        }
-      }
+    }
   }
 }
