--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,6 +28,7 @@ $picnic-grid-offpart-sizes: (
 @import 'navbar';
 @import 'page';
 @import 'updates';
+@import 'table';
 
 @media
 (-webkit-min-device-pixel-ratio: 2),
