--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -7,9 +7,7 @@ layout: default
     {{content}}
   </article>
   <aside>
-    {% assign docs = site.docs | sort: 'order' %}
-    {% assign docs = site.docs | sort: 'order' %}
-    <ul>{% for doc in docs %}
+    <ul>{% for doc in site.docs %}
       <li>
         <a href="{{doc.url}}">{{ doc.title }}</a>
       </li>
