--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -12,15 +12,7 @@ main {
   h3 {
     font-size: 1.8rem;
   }
-}
-main.page {
-  display: flex;
-  justify-content: center;
-  width: 95%;
   article {
-    padding-bottom: 1in;
-    // width: 80%;
-    max-width: 40em;
     a {
       text-decoration: underline;
     }
@@ -33,6 +25,16 @@ main.page {
       &+p {
         margin-top: 1.5em;
       }
+  }
+}
+main.page {
+  display: flex;
+  justify-content: center;
+  width: 95%;
+  article {
+    padding-bottom: 1in;
+    // width: 80%;
+    max-width: 40em;
     }
     a {
       color: var(--href);
